[package]
name = "example"
version = "0.1.0"
authors = ["First Last <first.last@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.2"
actix-web-httpauth = "0.5.0"
actix-rt = "1.1.1"
alcoholic_jwt = "1.0.0"
derive_more = "0.99.10"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.116"